--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MainFragment"
+    tools:context=".ui.main.MainFragment"
     android:background="@drawable/map">
 
     <FrameLayout
@@ -154,7 +154,7 @@
                 android:id="@+id/userLevel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="12"
+                android:text="00"
                 android:textColor="@color/white"
                 android:textSize="13dp"
                 android:textStyle="bold"
@@ -169,7 +169,7 @@
                 android:layout_height="13dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginBottom="20dp"
-                android:progress="50"
+                android:progress="0"
                 android:progressBackgroundTint="@color/white"
                 android:progressTint="#00BCD4"
                 app:layout_constraintBottom_toBottomOf="parent"
