--- a/app/src/main/res/layout/fragment_classification.xml
+++ b/app/src/main/res/layout/fragment_classification.xml
@@ -9,6 +9,7 @@
     android:background="@drawable/gradient_violet">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -76,5 +77,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/Error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout"
+        android:textSize="15dp"
+        android:textColor="#8C0000"
+        android:gravity="center" />
+        <!--android:text="Error loading classification, try again later"-->
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
