--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,6 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.MainFragment">
 
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/map"
+        tools:context=".ui.main.MainFragment"
+        android:name="com.google.android.gms.maps.SupportMapFragment"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
